fix: correct the z-index and use useCallback hook for handleViewStateChange

--- a/src/features/user/ManageProjects/StepForm.module.scss
+++ b/src/features/user/ManageProjects/StepForm.module.scss
@@ -150,7 +150,7 @@
   border-radius: 8px !important;
   overflow: hidden;
   box-shadow: 0px 3px 6px #00000029;
-  z-index: 9999;
+  z-index: 999;
 }
 
 .layerOption {
@@ -416,7 +416,7 @@
   flex-direction: column;
   gap: 8px;
   position: absolute;
-  z-index: 9999;
+  z-index: 999;
   top: 6px;
   left: 6px;
 
